<resources>
    <string name="app_name">터짐PT</string>
    <string name="tel">02-565-8876</string>
    <string name="nav_login">로그인</string>
    <string name="nav_pt">PT_ 수업</string>
    <string name="nav_yoga">요가_수업</string>
    <string name="nav_spining">스피닝_수업</string>
    <string name="nav_help">Help</string>
    <string name="nav_map">위치</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>