<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/nav_login"
            android:checked="true"/>
        <item
            android:id="@+id/nav_pt"
            android:title="@string/nav_pt" />
        <item
            android:id="@+id/nav_yoga"
            android:title="@string/nav_yoga" />
        <item
            android:id="@+id/nav_spining"
            android:title="@string/nav_spining" />
    </group>
        <item android:title="Infomation">
            <menu>
                <item android:id="@+id/nav_help"
                    android:title="@string/nav_help"/>
                <item android:id="@+id/nav_map"
                    android:title="@string/nav_map"/>
            </menu>
        </item>
</menu>